@@ -1,1 +1,1 @@
-Support for autocompletion on fields.
+Support for autocompletion on fields. Installing this bt5 will automatically use autocompletion for Relation Fields.
